fix white space at top of nav in mobile view

--- a/app/assets/stylesheets/partials/nav.scss
+++ b/app/assets/stylesheets/partials/nav.scss
@@ -16,6 +16,8 @@ nav {
   }
 
   ul {
+    margin-top: 0;
+    padding-top: 1em;
     li {
       padding-right: 2em;
     }
@@ -40,6 +42,8 @@ nav {
     color: white;
     text-shadow: .5px .5px $dark-orange;
     bottom: .4em;
+    padding-top: 0;
+    margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 0;
   }
